--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
