--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.2",
     "vue-chartjs": "^3.3.2",
     "vue-router": "^3.0.1"
   },
