--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
     "vue-chartjs": "^3.3.2",
